--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                     <h5 class="text-primary text-uppercase border-bottom mb-4 pb-3">Kontakt na autora</h5>
                     <div class="text-secondary">
                         <p><b>Marek Lučný</b></p>
-                        <p>E-mail: mlucny[at]email.cz</p>
-                        <p>Github: <a href="https://github.com/prezentace" target="_blank">https://github.com/prezentace</a></p>
+                        <p>E-mail: pato694[at]email.cz</p>
+                        <p>Github: <a href="https://github.com/pato694" target="_blank">https://github.com/pato694</a></p>
                     </div>
                 </div>
             </div>
